--- a/package.json
+++ b/package.json
@@ -2,11 +2,19 @@
   "name": "react",
   "version": "1.0.0",
   "description": "React example starter project",
-  "keywords": ["react", "starter"],
+  "keywords": [
+    "react",
+    "starter"
+  ],
   "main": "src/index.js",
   "dependencies": {
+    "@emotion/react": "11.8.2",
+    "@emotion/styled": "11.8.1",
+    "@mui/material": "5.5.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-helmet-async": "1.2.3",
+    "react-router-dom": "6.2.2",
     "react-scripts": "4.0.0"
   },
   "devDependencies": {
@@ -19,5 +27,10 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
