--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@emotion/react": "11.8.2",
     "@emotion/styled": "11.8.1",
+    "@faker-js/faker": "6.0.0",
+    "@iconify/react": "3.2.0",
     "@mui/material": "5.5.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
