--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@faker-js/faker": "6.0.0",
     "@iconify/react": "3.2.0",
     "@mui/material": "5.5.2",
+    "date-fns": "2.28.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-helmet-async": "1.2.3",
