--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@emotion/styled": "11.8.1",
     "@faker-js/faker": "6.0.0",
     "@iconify/react": "3.2.0",
+    "@mui/lab": "5.0.0-alpha.74",
     "@mui/material": "5.5.2",
     "date-fns": "2.28.0",
+    "lodash": "4.17.21",
+    "numeral": "2.0.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-helmet-async": "1.2.3",
