--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-dom": "17.0.2",
     "react-helmet-async": "1.2.3",
     "react-router-dom": "6.2.2",
-    "react-scripts": "4.0.0"
+    "react-scripts": "4.0.0",
+    "simplebar": "5.3.6"
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
